name:                advent2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent2018#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day-one
  hs-source-dirs:      src
  main-is:             One.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.3 && < 1.2.4
                     , containers >= 0.5 && < 0.6